--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -149,7 +149,7 @@
       <div class="sidebar">
         <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTION</h1>
         <div style="margin-top:15px; margin-bottom:15px;">  
-            <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
+            <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span>
              We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
           </div></div>
         <table>
