--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
       .tooltip{position:relative;display:inline-block; font-size:13px}
       .tooltip .tooltiptext{visibility:hidden;width:150px;background-color:#555;color:#fff;text-align:center;border-radius:6px;padding:10px;position:absolute;z-index:1;bottom:125%;left:50%;margin-left:-60px;opacity: 0.9;transition:opacity .3s}
       .tooltip .tooltiptext::after{content:"";position:absolute;top:100%;left:50%;margin-left:-18px;border-width:5px;border-style:solid;border-color:#555 transparent transparent}
-      .tooltip:hover .tooltiptext{visibility:visible;opacity:0.9}	  
+      .tooltip:hover .tooltiptext{visibility:visible;opacity:0.9}
+	  .disclaimer {margin-top:15px; margin-bottom:15px; border:1px solid orange; background-color:#F5D76E; padding:10px; border-radius:5px; font-size:14px}
       @media screen and (max-width:1024px) {
       h1{font-size:45px}
 	  h2{font-size:20px}
@@ -165,6 +166,7 @@
       h1{font-size:35px}
       }
       @media screen and (max-width:600px) {
+	  .disclaimer {padding:5x;font-size:13px;}
       .logo-left a{padding-top:5px!important;font-size:18px}
       .logo-left img{height:40px;width:50px;margin-top:-8px!important;margin-right:5px!important}
       .column{float:left;width:100%}
@@ -254,10 +256,6 @@
           <div class="gcse-searchresults"></div>
         </div>
         <h1>MikroTik Router<i>OS</i> Script and Tools</h1> 
-        <div style="margin-top:12px; margin-bottom:10px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:600; border-radius:5px">  
-            <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
-             We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
-          </div></div>
         <h2>MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
         <div class="row">
           <div class="column">
@@ -496,9 +494,14 @@
             </div>
           </a>
         </div>
-        <div class="footer">	
+        <div class="footer">
+        <div class="disclaimer">  
+            <div style="color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (December, 2022)</i></span> 
+             We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
+          </div>
+		  </div>		
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
-        <div style="margin-top:3px; color:#777; font-size:11px">
+        <div style="margin-top:0px; color:#777; font-size:11px">
           Project Design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
         </div>	 		  
         </div>
