--- a/pcc.html
+++ b/pcc.html
@@ -52,7 +52,7 @@
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;margin-bottom:10px;margin-top:5px;font-size:14px!important;border-radius:5px}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .list-output-content{height:527px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:5px;border:1px solid #ccc;border-radius:5px;font-size:14px;white-space:nowrap}
+      .list-output-content{height:592px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:5px;border:1px solid #ccc;border-radius:5px;font-size:14px;white-space:nowrap}
       @media screen and (max-width:700px) {
       .list-output-content{height:auto}
       .main-wrap{display:block}
@@ -156,12 +156,11 @@
               </select>
             </div>
           </div>
-          <div style="display:none">
+          <div style="display:flex">
             <div style="width:100%;">
               <label>Local Options</label>
-              <span class="tooltip"><span class="tooltiptext2">Under Construction !!</span><span style="color:green; font-size:15px;cursor:help; margin:0;padding:0">🛈</span></span>
               <select disabled style="margin-top:5px; width:100%" id="local-list" onchange="LocalAddressOption()">
-                <option value="local-list1">Address List</option>
+                <option value="local-list1">IP Address List</option>
                 <option value="local-list2">In. Interface</option>
                 <option value="local-list3">In. Interface List</option>
               </select>
