--- a/nth.html
+++ b/nth.html
@@ -159,7 +159,7 @@
           </div>
           <div style="display:flex">
             <div style="width:100%;">
-              <label>Local Options</label>
+              <label>Local Target</label>
               <select style="margin-top:5px; width:100%" id="local-list" onchange="LocalAddressOption()">
                 <option value="local-list1">IP Address List</option>
                 <option value="local-list2">In. Interface</option>
@@ -167,7 +167,7 @@
               </select>
             </div>
             <div style="width:100%;margin-left:10px;">
-              <label>Interface Name</label>
+              <label>Interface Target</label>
               <input disabled type="text" id="interface-name" placeholder="LOCAL-IP">
             </div>
           </div>
