--- a/nth.html
+++ b/nth.html
@@ -251,11 +251,9 @@
               ###############################################################<br>
               </span>
               <b>/ip firewall address-list</b><br>
-              add action=accept chain=prerouting dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
-              add action=accept chain=postrouting dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
-              add action=accept chain=forward dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
-              add action=accept chain=input dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
-              add action=accept chain=output dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>	
+              add address=192.168.0.0/16 list=LOCAL-IP comment="LB By BNT"<br>
+              add address=172.16.0.0/12 list=LOCAL-IP comment="LB By BNT"<br>
+              add address=10.0.0.0/8 list=LOCAL-IP comment="LB By BNT"<br>
               <b>/ip firewall nat</b><br>
               <span id="wan1-nat">add chain=srcnat out-interface="<span id="wan1-nat-text"></span>" action=masquerade comment="LB By BNT"<br></span>
               <span id="wan2-nat">add chain=srcnat out-interface="<span id="wan2-nat-text"></span>" action=masquerade comment="LB By BNT"<br></span>
@@ -288,6 +286,8 @@
               <span id="wan6-route-failover" style="display:none">add check-gateway=ping distance=6 gateway="<span id="wan6-route-failover-text"></span>" comment="LB By BNT"<br></span>
               <b>/ip firewall mangle</b><br>
               add action=accept chain=prerouting dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
+              add action=accept chain=postrouting dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
+              add action=accept chain=forward dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
               add action=accept chain=input dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
               add action=accept chain=output dst-address-list=LOCAL-IP src-address-list=LOCAL-IP comment="LB By BNT"<br>
               <span id="wan1-mangle-input">add action=mark-connection chain=prerouting in-interface="<span id="wan1-mangle-input-text"></span>" new-connection-mark="<span id="wan1-mangle-input-text-r"></span>" passthrough=yes comment="LB By BNT"<br></span>
