--- a/nth.html
+++ b/nth.html
@@ -168,7 +168,7 @@
             </div>
             <div style="width:100%;margin-left:10px;">
               <label>Interface Target</label>
-              <input disabled type="text" id="interface-name" placeholder="LOCAL-IP">
+              <input disabled type="text" id="interface-name" placeholder="LOCAL-IP (auto)">
             </div>
           </div>
           <div style="clear:both"></div>
