--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       ################################################
       ----------------------------------------------- */  
       body{background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:15px;line-height:normal;word-wrap:break-word;margin:0;padding:0;color:#292929}
-      h1{font-size:52px;color:#292929;font-weight:600;line-height:1.3;margin:0}
+      h1{font-size:48px;font-size:3rem;font-weight:700;letter-spacing:-1.6px;letter-spacing:-.1rem;line-height:1;text-align:center}
+      h1 span.light{font-weight:300}
       h2{font-weight:600;font-size:21px;color:#292929;border-bottom:1px solid #ccc;margin-bottom:6px;padding-bottom:3px}
       h3,h4,h5,h6{font-weight:400;font-size:17px;color:#292929;margin-bottom:10px;padding-bottom:10px}
       pre{white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;white-space:pre-wrap;word-wrap:break-word}
@@ -39,7 +40,7 @@
       .logo{color:#ddd;text-decoration:none;font-size:25px;font-weight:700;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;color:#ddd;margin-bottom:15px;margin-top:10px;padding:25px;clear:both}
       .logo a{color:#ddd!important;font-size:25px}
       *{box-sizing:border-box}
-      #wrap{min-width:200px; max-width:909px;margin:0 auto;padding:0 5px}
+      #wrap{min-width:200px;max-width:909px;margin:0 auto;padding:0 5px}
       .content{max-width:100%;margin:0 auto;margin-top:20px;margin-bottom:30px;padding:30px;border-radius:5px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);background:#fff;line-height:1.7}
       a:link{color:#f60;text-decoration:none;font-weight:700}
       a:visited{color:#f60;text-decoration:none}
@@ -138,13 +139,13 @@
       .footer{margin-top:15px;text-align:center;font-size:13px}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
-      .terminal{margin-bottom:15px;width:100%; display:none}
+      .terminal{margin-bottom:15px;width:100%;display:none}
       .terminal img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
-      .tooltip{position:relative;display:inline-block; font-size:13px}
-      .tooltip .tooltiptext{visibility:hidden;width:150px;background-color:#555;color:#fff;text-align:center;border-radius:6px;padding:10px;position:absolute;z-index:1;bottom:125%;left:50%;margin-left:-60px;opacity: 0.9;transition:opacity .3s}
+      .tooltip{position:relative;display:inline-block;font-size:13px}
+      .tooltip .tooltiptext{visibility:hidden;width:150px;background-color:#555;color:#fff;text-align:center;border-radius:6px;padding:10px;position:absolute;z-index:1;bottom:125%;left:50%;margin-left:-60px;opacity:.9;transition:opacity .3s}
       .tooltip .tooltiptext::after{content:"";position:absolute;top:100%;left:50%;margin-left:-18px;border-width:5px;border-style:solid;border-color:#555 transparent transparent}
-      .tooltip:hover .tooltiptext{visibility:visible;opacity:0.9}
-      .disclaimer {margin-top:15px; margin-bottom:15px; border:1px solid orange; background-color:#F5D76E; padding:10px; border-radius:5px; font-size:14px}
+      .tooltip:hover .tooltiptext{visibility:visible;opacity:.9}
+      .disclaimer{margin-top:15px;margin-bottom:15px;border:1px solid orange;background-color:#F5D76E;padding:10px;border-radius:5px;font-size:14px}
       @media screen and (max-width:1024px) {
       h1{font-size:45px}
       h2{font-size:20px}
@@ -166,7 +167,7 @@
       h1{font-size:35px}
       }
       @media screen and (max-width:600px) {
-      .disclaimer {padding:5x;font-size:13px;}
+      .disclaimer{padding:5x;font-size:13px}
       .logo-left a{padding-top:5px!important;font-size:18px}
       .logo-left img{height:40px;width:50px;margin-top:-8px!important;margin-right:5px!important}
       .column{float:left;width:100%}
@@ -174,7 +175,7 @@
       .show-login-menu{display:flex;justify-content:center;width:100%;margin-bottom:10px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       h1{font-size:30px}
-      h2{font-size:18px;}
+      h2{font-size:18px}
       .gsc-search-box{display:none!important}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .mymenu{padding-left:0;padding-right:0}
@@ -182,7 +183,7 @@
       }
       @media screen and (max-width:500px) {
       h1{font-size:25px}
-      h2{font-size:17px;}
+      h2{font-size:17px}
       .hide-homepage{display:none}
       }
       @media print {
@@ -227,6 +228,7 @@
         </div>
       </div>
       <div class="content">
+        <h1><span class="light">free scripting and tools generator. <br> <small>made for</small> <strong>MikroTik Router<i>OS</i></strong></span></h1>
         <div class="terminal">    
           <img src="./img/terminal.png" alt="MikroTik Terminal">
         </div>
@@ -255,7 +257,6 @@
         <div style="margin-bottom:-15px; margin-top:-12px">
           <div class="gcse-searchresults"></div>
         </div>
-        <h1>MikroTik Router<i>OS</i> Script and Tools</h1>
         <h2>MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
         <div class="row">
           <div class="column">
