--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
       </div>
       <div class="content">
-        <h1><span class="light">free routeros script and generator tools.<br><small>made for</small> <strong>MikroTik Router<i>OS</i></strong></span></h1>
+        <h1><span class="light">free scripting and  generator tools. <br> <small>made for</small> <strong>MikroTik Router<i>OS</i></strong></span></h1>
         <div class="terminal">    
           <img src="./img/terminal.png" alt="MikroTik Terminal">
         </div>
