--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <p><a target="_blank" rel="nofollow"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
           </div>
         </div>
-        <h2>MIKROTIK BILLING OR RADIUS HOTSPOT PPPOE </h2>
+        <h2>MIKROTIK RADIUS BILLING HOTSPOT OR PPPOE</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://freeradius.org">FREERADIUS</a></p>
