--- a/index.html
+++ b/index.html
@@ -269,9 +269,10 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Template</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot with Change TTL</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Easy Hotspot Configuration Wizard</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-ppp-generator.html">PPP / PPPoE Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Hotspot Username Password Creator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Hotspot Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share Up-To for Hotspot</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot + PPPoE</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
